# manager

./: .gitignore  Setup.hs
api/: App.hs  Error.hs  Main.hs  Rpc.hs  Setup.hs  xenclient-api.cabal
apptool/: AppInventory.hs  Appliance.hs  ApplianceOVF.hs  Errors.hs  GenEnv.hs  Idl.hs  Import.hs  ParseDBus.hs  Rpc.hs  Setup.hs  Util.hs  VirtualSystem.hs  apptool.cabal  apptool.hs
apptool/Core/: Types.hs  Uuid.hs
apptool/Import/: Files.hs  Images.hs  Monad.hs  Types.hs
apptool/OVF/: AllocationUnit.hs  Env.hs  Manifest.hs  Model.hs  ModelXCI.hs  Parse.hs  Verify.hs
apptool/samples/: uivm.ovf
apptool/schema/: dsp8023_2.0.0c.xsd  xciovf.xsd
apptool/schema/schemas.dmtf.org/wbem/wscim/1/cim-schema/2/: CIM_BootConfigSetting.xsd  CIM_BootSourceSetting.xsd  CIM_EthernetPortAllocationSettingData.xsd  CIM_ResourceAllocationSettingData.xsd  CIM_StorageAllocationSettingData.xsd  CIM_VirtualSystemSettingData.xsd
dbd/: .gitignore  Makefile  Makefile.rules  common.make  db-cat  db-exists  db-ls  db-nodes  db-read  db-rm  db-write  db_cmd.ml  db_core.ml  db_methods.ml  dbd.ml
dbd2/: Main.hs  Path.hs  Perms.hs  Rpc.hs  Store.hs  Tree.hs  Utils.hs  dbd2.cabal
disksync/: .gitignore  Config.hs  Db.hs  Disk.hs  DiskGroup.hs  DiskGroupRpc.hs  DiskRpc.hs  DiskSync.hs  Errors.hs  Image.hs  ImageRpc.hs  Main.hs  MainRpc.hs  ObjectPaths.hs  Rpc.hs  Types.hs  VhdSync.hs  disksyncmgr.cabal
disksync/Tools/: Argo.hsc  File.hs  FileC.hsc  JSONTrees.hs  Log.hs  Misc.hs  V4V.hsc  VhdSyncC.hsc  XenStore.hs  XenStoreC.hsc
disksync/cbits/: vhdsync_helper.c
linuxtools/: .gitignore  Makefile.am  agent.c  agent.h  argo.c  configure.ac  main.c  minidbus-dispatch.c  minidbus-dispatch.h  minidbus.c  minidbus.h  v4v.c
linuxtools/man/: Makefile  xc_agent.1
linuxtools/xenbus-s3-fix/: Makefile  dkms.conf  xenbus-s3-fix.c
linuxtools/xenbus-s3-fix/dkms/: control.in  dkms.conf.in  lintian  postinst  prerm
linuxtools/xenstore-agent/: Makefile  xs-agent.c
rpc-proxy/: Bouncer.hs  Channel.hs  Domain.hs  Firewall.hs  Main.hs  RpcProxy.hs  RpcProxyM.hs  RpcProxyObject.hs  Rules.hs  RulesCache.hs  RulesParser.hs  Settings.hs  Types.hs  rpc-proxy.cabal  sample.rules
rpc-proxy/Msg/: DBus.hs  Json.hs  JsonConv.hs  JsonRpc.hs
rpc-proxy/Rpc/: .gitignore
rpc-proxy/Tools/: Log.hs  Misc.hs  Serial.hsc
rpc-proxy/cbits/: serial.c
storehouse/: Main.hs  storehouse.cabal
storehouse/StoreHouse/: Ctx.hs  Error.hs  ObjectPaths.hs  Rpc.hs  SR.hs  SrObject.hs  StoreHouseRpc.hs  Vdi.hs  VdiObject.hs
storehouse/StoreHouse/VHD/: Forest.hs  Graph.hs  Util.hs
storehouse/Tools/: File.hs  Log.hs  TapControl.hs  Uuid.hs  UuidTable.hs
templates/default/: new-vm  new-vm-empty  new-vm-linux  new-vm-ndvm  new-vm-ndvm-hvm  new-vm-ndvm-pv  new-vm-sync  new-vm-windows8  new-vm-xp  service-ndvm  service-ndvm-hvm  service-ndvm-pv  service-uivm  service-usbvm
updatemgr/: .gitignore  Db.hs  Main.hs  updatemgr.cabal
updatemgr/Tools/: Error.hs
updatemgr/UpdateMgr/: App.hs  Background.hs  Curl.hs  DbReq.hs  DbReqHandler.hs  Error.hs  Logic.hs  MetaParse.hs  Poller.hs  Rpc.hs  Types.hs  UpdateMgrRpc.hs  UpdateMonad.hs  UpdateReq.hs  UpdateReqHandler.hs
updatemgr/cbits/: xs_helper.c
upgrade-db/: .gitignore  FileTools.hs  InformTools.hs  JSONPretty.hs  JSONTrees.hs  Migrations.hs  Setup.hs  ShellTools.hs  Upgrade.hs  UpgradeEngine.hs  upgrade-db.cabal
upgrade-db/Migrations/: M_1.hs  M_10.hs  M_11.hs  M_12.hs  M_13.hs  M_14.hs  M_15.hs  M_16.hs  M_17.hs  M_18.hs  M_19.hs  M_2.hs  M_20.hs  M_21.hs  M_22.hs  M_23.hs  M_24.hs  M_25.hs  M_26.hs  M_27.hs  M_28.hs  M_29.hs  M_3.hs  M_30.hs  M_31.hs  M_32.hs  M_33.hs  M_34.hs  M_35.hs  M_36.hs  M_37.hs  M_38.hs  M_39.hs  M_4.hs  M_40.hs  M_41.hs  M_5.hs  M_6.hs  M_7.hs  M_8.hs  (+2 more)
xec/: Cmd.hs  DBusArgo.hs  DBusV4V.hs  Option.hs  Parse.hs  Show.hs  xec-vm.hs  xec-vm.usage  xec.cabal  xec.hs  xec.usage
xenmgr/: .gitignore  Main.hs  Setup.hs  setup-ica-vm  xenmgr.cabal
xenmgr-core/: .gitignore  xenmgr-core.cabal
xenmgr-core/Vm/: ArgoFirewall.hs  ProductProperty.hs  Uuid.hs  V4VFirewall.hs
xenmgr/Rpc/: .gitignore
xenmgr/Tools/: Apptool.hs  Lock.hs  PartTable.hs
xenmgr/Vm/: Actions.hs  Balloon.hs  Config.hs  ConfigWriter.hs  DepGraph.hs  Dm.hs  DmTypes.hs  DomainCore.hs  Monad.hs  Monitor.hs  Pci.hs  PciDatabase.hs  PciTypes.hs  Policies.hs  Queries.hs  Queries.hs-boot  QueriesM.hs  React.hs  React.hs-boot  State.hs  Templates.hs  Types.hs  Utility.hs
xenmgr/XenMgr/: CdLock.hs  Config.hs  Db.hs  Diagnostics.hs  Diskmgr.hs  Errors.hs  FetchLog.hs  GuestReq.hs  Host.hs  HostOps.hs  HostOps.hs-boot  Notify.hs  PowerManagement.hs  PowerManagement.hs-boot  Rpc.hs  Testing.hs  User.hs  Vm.hs  XM.hs
xenmgr/XenMgr/Connect/: GuestRpcAgent.hs  InputDaemon.hs  NetworkDaemon.hs  Xenvm.hs  Xl.hs
xenmgr/XenMgr/Expose/: HostObject.hs  ObjectPaths.hs  VmDiskObject.hs  VmNicObject.hs  VmObject.hs  XenmgrObject.hs
