Name:       disksyncmgr
Version:    1.0
Cabal-Version:  >= 1.2
Author:     Daniel Ferstay, Tomasz Wroblewski
Stability:  experimental
Build-Type: Simple

Executable disksyncmgr
  Build-Depends:
    parsec >= 3.1,
    base,
    deepseq,
    containers,
    haskell98,
    process,
    unix,
    text,
    mtl,
    network,
    bytestring,
    utf8-string,
    filepath,
    json,
    regex-posix,
    hsyslog,
    xchutils,
    xch-rpc
  Main-Is: Main.hs
  GHC-Options: -O2 -fwarn-incomplete-patterns -dynamic -threaded -XScopedTypeVariables -XGeneralizedNewtypeDeriving -XPatternGuards
  Other-Modules: Tools.FileC Tools.XenStoreC Tools.Argo Tools.VhdSyncC
  Extra-Libraries: xenstore argo
  C-sources: cbits/xs_helper.c cbits/vhdsync_helper.c
