Name:       storehouse
Version:    1.0
Cabal-Version:  >= 1.2
Author:     Vincent Hanquez
Stability:  experimental
Build-Type: Simple

Flag dynamic
    Description: build dynamically
    Default:     True

Executable storehouse
  Build-Depends:
    parsec >= 3.1,
    base >= 3 && < 5,
    time,
    deepseq,
    containers,
    process,
    unix,
    text,
    mtl,
    network,
    bytestring,
    utf8-string,
    filepath,
    json,
    regex-posix,
    hsyslog,
    directory,
    MonadPrompt,
    vhd == 0.2,
    xchutils,
    xch-rpc
  Main-Is: Main.hs
  GHC-Options: -O2 -fwarn-incomplete-patterns -threaded
  if flag(dynamic)
    GHC-Options: -dynamic
  Other-Modules: Tools.FileC
