Name:       xec
Version:    1.0
Cabal-Version:  >= 1.2
Author:     Tomasz Wroblewski
Stability:  experimental
Build-Type: Simple

Flag static
     Description: link statically
     Default: False

Executable xec
  Build-Depends:
    base,
    parsec >= 3.1,
    bytestring,
    utf8-string,
    text,
    udbus,
    udbus-intro,
    hsyslog,
    network,
    containers,
    xchargo

  Main-Is: xec.hs
  if flag(static)
    GHC-Options: -O2 -Werror -fwarn-incomplete-patterns
  else
    GHC-Options: -O2 -Werror -fwarn-incomplete-patterns -dynamic

Executable xec-vm
  Build-Depends:
    base,
    process,
    unix,
    udbus

  Main-Is: xec-vm.hs
  if flag(static)
    GHC-Options: -O2 -Werror -fwarn-incomplete-patterns
  else
    GHC-Options: -O2 -Werror -fwarn-incomplete-patterns -dynamic
