Name:       xenmgr
Version:    1.0
Cabal-Version:  >= 1.2
Author:     Tomasz Wroblewski
Stability:  experimental
Build-Type: Simple

Executable xenmgr
  Build-Depends:
    attoparsec,
    parsec >= 3.1,
    base,
    directory,
    time,
    deepseq,
    containers,
    process,
    unix,
    text,
    mtl,
    network,
    bytestring,
    utf8-string,
    filepath,
    json,
    regex-posix,
    hsyslog,
    zlib,
    split,
    xch-rpc,
    xchutils,
    xchargo,
    xchxenstore,
    xchdb,
    xenmgr-core,
    old-locale

  Main-Is: Main.hs
  GHC-Options: -O2 -Werror -Wno-deprecations -fwarn-incomplete-patterns -threaded -dynamic

  Other-Modules:
    Paths_xenmgr
    Rpc.Autogen.CtxusbDaemonClient
    Rpc.Autogen.DbusClient
    Rpc.Autogen.GuestClient
    Rpc.Autogen.InputDaemonClient
    Rpc.Autogen.NetworkClient
    Rpc.Autogen.NetworkDaemonClient
    Rpc.Autogen.VmDiskServer
    Rpc.Autogen.VmNicServer
    Rpc.Autogen.XenmgrConst
    Rpc.Autogen.XenmgrHostNotify
    Rpc.Autogen.XenmgrHostServer
    Rpc.Autogen.XenmgrNotify
    Rpc.Autogen.XenmgrServer
    Rpc.Autogen.XenmgrVmConst
    Rpc.Autogen.XenmgrVmServer
    Tools.Apptool
    Tools.Lock
    Vm.Actions
    Vm.Balloon
    Vm.Config
    Vm.ConfigWriter
    Vm.DepGraph
    Vm.Dm
    Vm.DmTypes
    Vm.DomainCore
    Vm.Monad
    Vm.Monitor
    Vm.Pci
    Vm.PciDatabase
    Vm.PciTypes
    Vm.Policies
    Vm.Queries
    Vm.Queries
    Vm.QueriesM
    Vm.React
    Vm.React
    Vm.State
    Vm.Templates
    Vm.Types
    Vm.Utility
    XenMgr.CdLock
    XenMgr.Config
    XenMgr.Connect.GuestRpcAgent
    XenMgr.Connect.InputDaemon
    XenMgr.Connect.NetworkDaemon
    XenMgr.Connect.Xl
    XenMgr.Db
    XenMgr.Diagnostics
    XenMgr.Diskmgr
    XenMgr.Errors
    XenMgr.Expose.HostObject
    XenMgr.Expose.ObjectPaths
    XenMgr.Expose.VmDiskObject
    XenMgr.Expose.VmNicObject
    XenMgr.Expose.VmObject
    XenMgr.Expose.XenmgrObject
    XenMgr.FetchLog
    XenMgr.GuestReq
    XenMgr.Host
    XenMgr.HostOps
    XenMgr.Notify
    XenMgr.PowerManagement
    XenMgr.PowerManagement
    XenMgr.Rpc
    XenMgr.Testing
    XenMgr.User
    XenMgr.Vm
    XenMgr.XM
